--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
 .App {
   text-align: center;
+  background:lightgray
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.formLabels{
+  width:150px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainTitle{
+  margin-bottom:40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.subTitle{
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.borderLines div{
+  border: solid 1px black;
 }
